Refactoring of the integration tests